# permutations_iter

./: Cargo.toml  LICENSE  README.md  lib.rs
