[package]
name = "permutations_iter"
description = "Generate permutations iteratively without recursion in O(n) time."
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "permutations_iter"
path = "lib.rs"
