[package]
name = "permutations_iter"
description = "Generate permutations iteratively without recursion in O(n) time."
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/acarturk-e/permutations_iter"
readme = "README.md"
category = ["algorithms", "mathematics"]
keywords = ["permutation", "iterator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "permutations_iter"
path = "lib.rs"
